# async_architecture

./: README.md  docker-compose.yml
auth_service/: Dockerfile  pyproject.toml  requirements.txt
auth_service/auth_service/: __main__.py  app.py  config.py  data_sources.py  views.py
auth_service/auth_service/adapters/: message_bus.py
auth_service/auth_service/adapters/repository/: auth.py  user.py
auth_service/auth_service/domain/: event.py  model.py
auth_service/auth_service/domain/event/: builder.py
auth_service/auth_service/domain/event/user/user_deleted/: v1.py
auth_service/auth_service/service_layer/: unit_of_work.py  user.py
backend/: Dockerfile  pyproject.toml
backend/backend/: __main__.py
docs/: ARCHITECTURE.md
docs/old/: README.md
frontend/: Dockerfile  pyproject.toml  requirements.txt
frontend/frontend/: __main__.py
schema_registry/task/task_added/: 1.json
schema_registry/task/task_assigned/: 1.json
task_tracker/: Dockerfile  pyproject.toml  requirements.txt
task_tracker/task_tracker/: __main__.py  app.py  config.py  consumer.py  data_sources.py  views.py
task_tracker/task_tracker/adapters/: message_bus.py
task_tracker/task_tracker/adapters/repository/: task.py  user.py
task_tracker/task_tracker/domain/: event.py  model.py
task_tracker/task_tracker/domain/event/: builder.py
task_tracker/task_tracker/domain/event/task/task_added/: v1.py
task_tracker/task_tracker/domain/event/task/task_assigned/: v1.py
task_tracker/task_tracker/domain/event/task/task_closed/: v1.py
task_tracker/task_tracker/domain/event/task/task_created/: v1.py
task_tracker/task_tracker/domain/event/task/task_shuffle_requested/: v1.py
task_tracker/task_tracker/domain/event/task/task_updated/: v1.py
task_tracker/task_tracker/domain/event/user/user_created/: v1.py
task_tracker/task_tracker/domain/event/user/user_deleted/: v1.py
task_tracker/task_tracker/domain/event/user/user_updated/: v1.py
task_tracker/task_tracker/service_layer/: task.py  unit_of_work.py  user.py
(+7 files in other folders)
